# BarsTech_goldsrc_compatible_public

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  createengine.bat  renderer_sw.sln  renderer_sw.vcxproj  renderer_sw.vcxproj.filters
GameUI/: BackgroundMenuButton.cpp  CMakeLists.txt  CareerGameTasks.cpp  GameUI.vcxproj  GameUI.vcxproj.filters  GameUI_Interface.cpp  GameUI_Interface.h  LoadingDialog.cpp  Taskbar.cpp  cmake_install.cmake
GameUI/common/: cmake_install.cmake
GameUI/public/: cmake_install.cmake
GameUI/public/appframework/: cmake_install.cmake
GameUI/public/bitmap/: cmake_install.cmake
GameUI/public/html/: cmake_install.cmake
GameUI/public/mathlib/: cmake_install.cmake
GameUI/public/tier0/: cmake_install.cmake
GameUI/public/tier1/: cmake_install.cmake
GameUI/public/vgui/: cmake_install.cmake
GameUI/public/vgui_controls/: cmake_install.cmake
GameUI/public/vstdlib/: cmake_install.cmake
cmake/: base.cmake  feature_flags.cmake  projects.cmake  simpleinstall.cmake
common/: BaseSystemModule.cpp  CCommandLine.cpp  EngineSurface.h  IBaseSystem.h  IEngineWrapper.h  IGameServerData.h  ISystemModule.h  ObjectList.cpp  TokenLine.cpp  bspfile.h  com_model.h  con_nprint.h  const.h  ienginevgui.h  net_api.h  qlimits.h  r_studioint.h
common/GameUI/: IGameUI.h
engine/: APIProxy.h  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  DemoPlayerWrapper.cpp  DemoPlayerWrapper.h  DetailTexture.cpp  DetailTexture.h  HUD.cpp  IGame.h  LoadBlob.cpp  LoadBlob.h  Sequence.cpp  SystemWrapper.cpp  SystemWrapper.h  VGUI_EngineSurfaceWrap.cpp  adivtab.h  anorm_dots.h  bitmap_win.cpp  bitmap_win.h  buildnum.cpp  cd.cpp  cd.h  cdll_exp.cpp  cdll_exp.h  cdll_int.cpp  cdll_int.h  chase.cpp  cl_demo.cpp  cl_demo.h  cl_draw.cpp  cl_draw.h  cl_ents.cpp  cl_ents.h  cl_extrap.cpp  cl_extrap.h  cl_main.cpp  cl_main.h  cl_parse.cpp  cl_parse.h  (+225 more)
engine/vgui2/: BaseUISurface.cpp  BaseUISurface.h  BaseUISurface_Font.cpp  BaseUISurface_Font.h  BaseUI_Interface.cpp  FontTextureCache.cpp  text_draw.cpp  text_draw.h
filesystem/: cmake_install.cmake
filesystem/FileSystem_Stdio/: BaseFileSystem.cpp  BaseFileSystem.h  CFileSystem.cpp  CFileSystem.h  CMakeLists.txt  FileSystem_Stdio.cpp  cmake_install.cmake  filesystem_helpers.h  filesystem_stdio.vcxproj  filesystem_stdio.vcxproj.filters  precompiled.h
launcher/: CMakeLists.txt  launcher.cpp  launcher.vcxproj  launcher.vcxproj.filters
public/: FileSystem.h  SDK_Color.h  UnicodeFileHelpers.cpp  characterset.h  d_iface.h.old  igameuifuncs.h  ilauncherdirectdraw.h  interface.cpp  ivoicecodec.h  processor_detect.cpp  registry.cpp  steamid.cpp  sys_procinfo.cpp
public/steam/: isteamhttp.h  isteammatchmaking.h  isteamnetworking.h  isteamremotestorage.h  isteamuser.h  isteamuserstats.h  isteamutils.h  matchmakingtypes.h  steam2compat.h
public/tier0/: MinMax.h  annotations.h  basetypes.h  memalloc.h  memdbgon.h  platform.h
public/tier1/: DataManager.h  Diff.h  KeyValues.h  MemStack.h  RefCount.h  UtlBuffer.h  UtlFixedMemory.h  UtlMemory.h  UtlRBTree.h  UtlString.h  UtlSymbol.h  UtlVector.h  bitbuf.h  byteswap.h  strtools.h
public/vgui/: Dar.h  IInput.h  IPanel.h  IScheme.h  ISurface.h  ISystem.h  IVGui.h
public/vgui_controls/: EditablePanel.h  Label.h  ListPanel.h  RichText.h  TextEntry.h  TextImage.h  TreeViewListControl.h  vgui_controls.cpp
tier0/: CMakeLists.txt  cpu.cpp  tier0.vcxproj  tier0.vcxproj.filters
tier1/: CMakeLists.txt  CharacterSet.cpp  Diff.cpp  KeyValues.cpp  TokenReader.cpp  UtlBuffer.cpp  UtlString.cpp  bitbuf.cpp  byteswap.cpp  checksum_crc.cpp  checksum_md5.cpp  interface.cpp  netadr.cpp  strtools.cpp  tier1.vcxproj  tier1.vcxproj.filters  unicode_strtools.cpp  xboxstubs.cpp
vgui2/controls/: AnimationController.cpp  BitmapImagePanel.cpp  BuildModeDialog.cpp  Button.cpp  CMakeLists.txt  CheckButton.cpp  Controls.cpp  Frame.cpp  HTML.cpp  Image.cpp  ImageList.cpp  ImagePanel.cpp  Label.cpp  ListPanel.cpp  ListViewPanel.cpp  Menu.cpp  Panel.cpp  PanelListPanel.cpp  PropertyPage.cpp  PropertySheet.cpp  RadioButton.cpp  RichText.cpp  ScrollBarSlider.cpp  SectionedListPanel.cpp  Slider.cpp  Splitter.cpp  TextEntry.cpp  TextImage.cpp  ToggleButton.cpp  TreeView.cpp  TreeViewListControl.cpp  vgui2_controls.vcxproj  vgui2_controls.vcxproj.filters
vgui2/src/: Bitmap.cpp  Bitmap.h  Border.cpp  Border.h  CMakeLists.txt  LocalizedStringTable.cpp  MemoryBitmap.cpp  MemoryBitmap.h  Scheme.cpp  Scheme.h  VGuiKeyValues.cpp  VPanel.cpp  VPanelWrapper.cpp  input.cpp  system_win32.cpp  vgui.cpp  vgui.h  vgui2.vcxproj  vgui2.vcxproj.filters  vgui_internal.cpp  vgui_internal.h  vgui_key_translation.cpp
vgui2/vgui_surfacelib/: CMakeLists.txt  FontAmalgam.cpp  FontAmalgam.h  FontManager.cpp  FontManager.h  Win32Font.cpp  Win32Font.h  vgui2_surfacelib.vcxproj  vgui2_surfacelib.vcxproj.filters
